--- a/src/app.css
+++ b/src/app.css
@@ -1,12 +1,14 @@
-@import '@fontsource/fira-mono';
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Concert+One&display=swap');
 
 :root {
-  font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-mono: 'Fira Mono', monospace;
+  font-family: 'Baloo Paaji 2', Arial, -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
+    sans-serif;
+  font-weight: 100;
   --primary: #eb4034;
-  --secondary: #9632a8;
-  --background-color: #292929;
+  --secondary: #8f3f98;
+  --background: #222;
+  --background-light: #333;
   --text-color: #ddd;
 }
 
@@ -19,8 +21,12 @@
 
 body {
   min-height: 100vh;
-  background: var(--background-color);
+  background: var(--background);
   overflow-x: hidden;
+}
+
+.blurred main {
+  filter: blur(5px);
 }
 
 #svelte {
