--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;700&family=Concert+One&display=swap');
 
 :root {
-  font-family: 'Baloo Paaji 2', Arial, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
   --primary: #eb4034;
   --secondary: #8f3f98;
@@ -28,7 +27,7 @@ body {
 body::-webkit-scrollbar {
   width: 12px;
 }
-body::-webkit-scrollbar-thumb {    
+body::-webkit-scrollbar-thumb {
   background-color: var(--background-light);
   border: 2px solid var(--background);
   border-radius: 6px;
@@ -42,6 +41,14 @@ body.blurred {
 }
 .blurred main {
   filter: blur(5px);
+}
+header.hasshadow {
+  box-shadow: 0 5px 15px -4px rgba(0, 0, 0, 0.7);
+}
+@media (min-width: 800px) {
+  header.hasshadow {
+    height: 60px !important;
+  }
 }
 
 ::selection {
