--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,7 @@
   --text-color-selected: #fff;
   --scrollbar-thumb: rgba(255, 255, 255, 0.13);
   scrollbar-color: var(--scrollbar-thumb) var(--background-light);
+  scroll-behavior: smooth;
 }
 
 *,
