--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,12 @@
   box-sizing: border-box;
 }
 
+h1, h2, h3 {
+  margin: 0;
+  font-weight: 600;
+  line-height: 1.1;
+}
+
 body {
   min-height: 100vh;
   background: var(--background);
