--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;700&family=Concert+One&display=swap');
 
 :root {
-  font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 100;
   --primary: #eb4034;
   --secondary: #8f3f98;
   --background: #222;
@@ -11,8 +8,13 @@
   --text-color: #ddd;
   --text-color-selected: #fff;
   --scrollbar-thumb: rgba(255, 255, 255, 0.13);
+  font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 100;
   scrollbar-color: var(--scrollbar-thumb) var(--background-light);
   scroll-behavior: smooth;
+  font-size: 62.5%;
+  min-width: 320px;
 }
 
 *,
@@ -22,10 +24,15 @@
   box-sizing: border-box;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   margin: 0;
   font-weight: 600;
   line-height: 1.1;
+}
+p {
+  font-size: 1.6rem;
 }
 
 body {
