--- a/src/app.css
+++ b/src/app.css
@@ -2,9 +2,10 @@
 
 :root {
   --primary: #eb4034;
-  --secondary: #8f3f98;
+  --secondary: #a95fb1;
   --background: #222;
   --background-light: #292929;
+  --background-lightest: #333;
   --text-color: #ddd;
   --text-color-selected: #fff;
   --scrollbar-thumb: rgba(255, 255, 255, 0.13);
@@ -60,13 +61,16 @@ body.blurred {
 }
 header.hasshadow {
   height: 60px !important;
-  background: var(--background-light) !important;
+  background: var(--background-lightest) !important;
   box-shadow: 0 5px 15px -4px rgba(0, 0, 0, 0.7);
 }
 
 ::selection {
-  background-color: var(--background-light);
-  color: var(--primary);
+  background-color: var(--primary);
+  color: var(--text-color-selected);
+}
+a::selection  {
+  color: var(--background);
 }
 
 #svelte {
