--- a/src/app.css
+++ b/src/app.css
@@ -8,12 +8,11 @@
   --background-lightest: #333;
   --text-color: #ccc;
   --text-color-selected: #fff;
-  --scrollbar-thumb: rgba(255, 255, 255, 0.13);
+  --scrollbar-thumb: #444;
   font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
   scrollbar-color: var(--scrollbar-thumb) var(--background-light);
-  scroll-behavior: smooth;
   font-size: 62.5%;
   min-width: 320px;
 }
