reverted last commit

--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
 
 :root {
   --primary: #eb4034;
-  --secondary: #69508f;
+  --secondary: #a95fb1;
   --background: #222;
   --background-light: #292929;
   --background-lightest: #333;
