--- a/src/locomotive-scroll.css
+++ b/src/locomotive-scroll.css
@@ -41,7 +41,7 @@ html.has-scroll-dragging {
   position: absolute;
   right: 0;
   top: 0;
-  width: 11px;
+  width: 1.1rem;
   height: 100%;
   transform-origin: center right;
   transition: transform 0.3s, opacity 0.3s;
@@ -57,7 +57,7 @@ html.has-scroll-dragging {
 }
 [data-scroll-direction='horizontal'] .c-scrollbar {
   width: 100%;
-  height: 10px;
+  height: 1rem;
   top: auto;
   bottom: 0;
   transform: scaleY(1);
@@ -72,9 +72,9 @@ html.has-scroll-dragging {
   right: 0;
   background-color: var(--scrollbar-thumb);
   opacity: 1;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
+  width: 0.7rem;
+  border-radius: 1rem;
+  margin: 0.2rem;
   cursor: -webkit-grab;
   cursor: grab;
 }
