--- a/src/app.css
+++ b/src/app.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;700&family=Concert+One&display=swap');
 
 :root {
-  --primary: #eb4034;
-  --secondary: #a95fb1;
+  --primary: #ff5144;
+  --secondary: #cd6ed8;
   --background: #222;
   --background-light: #292929;
   --background-lightest: #333;
   --text-color: #ccc;
   --text-color-selected: #fff;
   --scrollbar-thumb: #444;
+  --selection-background: #da2316;
   font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
@@ -72,11 +73,12 @@ header.ishidden {
 }
 
 ::selection {
-  background-color: var(--primary);
+  background-color: var(--selection-background);
   color: var(--text-color-selected);
 }
 a::selection {
-  color: var(--background);
+  color: var(--background) !important;
+  text-shadow: 1px 0 var(--background);
 }
 
 #svelte {
