moved scroll functions to interactions folder

--- a/src/app.css
+++ b/src/app.css
@@ -87,7 +87,7 @@ a::selection {
   display: flex;
 }
 
-#scroll-tip.scrolled {
+#scroll-tip.isscrolled {
   animation: fadeout 1s forwards !important;
 }
 @keyframes fadeout {
