added basic gsap page loading animation

--- a/src/app.css
+++ b/src/app.css
@@ -87,6 +87,9 @@ a::selection {
   display: flex;
 }
 
+#scroll-tip.istop {
+  animation: fadein 3s forwards !important;
+}
 #scroll-tip.isscrolled {
   animation: fadeout 1s forwards !important;
 }
@@ -106,5 +109,27 @@ a::selection {
   to {
     opacity: 0;
     display: none;
+  }
+}
+@keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
