--- a/src/app.css
+++ b/src/app.css
@@ -13,6 +13,7 @@
   font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
+  scrollbar-width: none;
   scrollbar-color: var(--scrollbar-thumb) var(--background-light);
   font-size: 62.5%;
   min-width: 320px;
@@ -46,6 +47,7 @@ body {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
+  display: none;
   width: 1.2rem;
 }
 body::-webkit-scrollbar-thumb {
