updated projects section for desktop

--- a/src/lib/FeaturedProjects/ProjectStyles.scss
+++ b/src/lib/FeaturedProjects/ProjectStyles.scss
@@ -1,6 +1,10 @@
 .project-wrapper {
-  max-width: 80rem;
+  max-width: 100%;
   padding: 3rem 1rem;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  position: relative;
   &:nth-of-type(2n - 1) {
     background: var(--background-light);
   }
@@ -73,6 +77,85 @@
     &:hover svg,
     &:focus-visible svg {
       color: var(--primary);
+    }
+  }
+  .project-preview {
+    display: none;
+  }
+  @media (min-width: 800px) {
+    & {
+      width: 100%;
+      padding: 4rem 3rem;
+    }
+    &:nth-of-type(2n - 1) {
+      background: unset;
+    }
+    &:not(:last-child) {
+      margin: 0;
+    }
+    &:nth-of-type(1) {
+      transform: translateY(0.2rem);
+    }
+    &:nth-of-type(2) {
+      transform: translateY(0.1rem);
+    }
+    p {
+      max-width: 50rem;
+    }
+    .project-preview {
+      z-index: -1;
+      display: initial;
+      position: absolute;
+      top: 50%;
+      right: 0;
+      width: 60%;
+      height: 45%;
+      transform: translateY(-50%);
+      transition: width 0.3s ease;
+
+      img {
+        position: absolute;
+        top: 50%;
+        right: 0;
+        filter: opacity(0.1) grayscale(1);
+        transform: translateY(-50%);
+        width: 100%;
+        transition: transform 0.3s ease, width 0.3s ease, filter 0.3s ease;
+      }
+      &:hover {
+        width: 80%;
+        height: 60%;
+        z-index: 1;
+        img {
+          width: 100%;
+          filter: opacity(1) grayscale(0) drop-shadow(0 0 1rem #000);
+        }
+      }
+    }
+    &:nth-of-type(2) {
+      align-items: flex-end;
+      h2 {
+        text-align: right;
+      }
+      p {
+        text-align: right;
+      }
+      .horizontal-section {
+        flex-direction: row-reverse;
+      }
+      .project-preview {
+        left: 0;
+
+        img {
+          left: 0;
+          filter: opacity(0.2) grayscale(1);
+        }
+        &:hover {
+          img {
+            filter: opacity(1) grayscale(0) drop-shadow(0 0 1rem #000);
+          }
+        }
+      }
     }
   }
 }
