--- a/src/app.css
+++ b/src/app.css
@@ -13,8 +13,8 @@
   font-family: 'Baloo Paaji 2', Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
-  scrollbar-width: none;
   scrollbar-color: var(--scrollbar-thumb) var(--background-light);
+  scroll-behavior: smooth;
   font-size: 62.5%;
   min-width: 320px;
 }
@@ -47,7 +47,6 @@ body {
   overflow-x: hidden;
 }
 body::-webkit-scrollbar {
-  display: none;
   width: 1.2rem;
 }
 body::-webkit-scrollbar-thumb {
