--- a/src/lib/FeaturedProjects/ProjectStyles.scss
+++ b/src/lib/FeaturedProjects/ProjectStyles.scss
@@ -92,7 +92,7 @@
   @media (min-width: 800px) {
     & {
       width: 100%;
-      padding: 4rem 3rem;
+      padding: 6rem 3rem;
     }
     &:nth-of-type(2n - 1) {
       background: unset;
@@ -124,6 +124,7 @@
       top: 50%;
       right: 0;
       width: 60%;
+      max-width: 80rem;
       height: 45%;
       transform: translateY(-50%);
       transition: width 0.3s ease;
@@ -136,6 +137,11 @@
         transform: translateY(-50%);
         width: 100%;
         transition: transform 0.3s ease, width 0.3s ease, filter 0.3s ease;
+      }
+      &.dark {
+        img {
+          filter: opacity(0.2) grayscale(1);
+        }
       }
       &:hover {
         z-index: 3;
@@ -164,7 +170,6 @@
 
         img {
           left: 0;
-          filter: opacity(0.2) grayscale(1);
         }
         &:hover {
           img {
